--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,11 @@
 .footer {
-  padding: 0px 0px 24px 16px;
+  padding: 64px 0px 24px 16px;
   display: flex;
   flex-direction: column;
   max-width: 320px;
+  background-color: #2A2C2F;
+  margin: 0px auto;
+  color: #FFFFFF;
 }
 
 @media screen and (min-width: 768px) {
@@ -10,7 +13,7 @@
     max-width: 720px;
     flex-direction: row;
     align-items:center;
-    padding: 0px 0px 24px;
+    padding: 88px 0px 24px;
     justify-content: space-between;
   }
 }
@@ -18,7 +21,7 @@
 @media screen and (min-width: 1024px) {
   .footer {
     max-width: 928px;
-    padding-left: 48px;
+    padding-top: 92px;
   }
 }
 
