--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,7 +2,7 @@
   margin: 0px auto;
   max-width: 288px;
   font-size: 40px;
-  font-weight: bold;
+  font-weight: 900;
   line-height: 44px;
   text-align: center;
 }
