--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,9 +1,34 @@
 .cover__overlay {
-  z-index: 1;
-  position: absolute;
+  width: 100%;
+  min-height: 200px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   align-items: center;
   text-decoration: none;
+  background-color: rgba( 42, 44, 47, 0.3);
+}
+
+.cover__overlay:hover {
+  background-color: rgba(42, 44, 47, 0.8);
+}
+
+@media screen and (min-width: 768px) {
+  .cover__overlay {
+    min-height: 480px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cover__overlay {
+    max-width: 1024px;
+    min-height: 640px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .cover__overlay {
+    max-width: 1184px;
+    min-height: 740px;
+  }
 }
