--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,11 +1,12 @@
 .cover__subtitle {
   max-width: 288px;
+  font-size: 14px;
   line-height: 16px;
   text-align: center;
-  z-index: 2;
   text-decoration: none;
   color: #fff;
-  
+  margin: 0;
+
 }
 
 @media screen and (min-width: 768px) {
