--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,15 +1,15 @@
 .cover__title {
   max-width: 288px;
   font-size: 32px;
-  font-weight: 900;
   line-height: 35px;
+  font-weight: 900;
   text-align: center;
   padding: 33px 0px 16px;
   margin: 0px auto;
   z-index: 2;
   text-decoration: none;
   color: #fff;
-  
+
 }
 
 @media screen and (min-width: 768px) {
@@ -17,5 +17,18 @@
     max-width: 560px;
     font-size: 72px;
     line-height: 76px;
+    padding: 115px 0px 32px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cover__title {
+    padding: 195px 0px 32px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .cover__title {
+    padding: 245px 0px 32px;
   }
 }
