--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,15 +2,17 @@
   text-decoration: none;
   color: #fff;
   font-size: 24px;
+  line-height: 24px;
 }
 
 .footer__link:hover{
   transition: opacity .3s linear;
-  opacity: .5;
+  opacity: 0.8;
 }
 
 @media screen and (min-width: 768px) {
   .footer__link {
     font-size: 16px;
+    line-height: 18px;
   }
 }
