--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,18 +1,18 @@
 .header__lang-link {
-  max-width: 22px;
   text-decoration: none;
   color: #fff;
   font-size: 18px;
+  line-height: 20px;
 }
 
 .header__lang-link:hover{
   transition: opacity .3s linear;
-  opacity: .5;
+  opacity: .8;
 }
 
 @media screen and (min-width: 768px) {
   .header__lang-link {
-    max-width: 29px;
     font-size: 24px;
+    line-height: 28px;
   }
 }
