--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -5,5 +5,6 @@
   flex-direction: column;
   align-items: flex-start;
   padding-top: 34px;
-  line-height: 18px;
+  list-style-type: none;
+  padding-inline-start: 0px;
 }
