--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,7 +3,7 @@
   max-width: 288px;
   font-size: 16px;
   line-height: 20px;
-  padding-top: 16px;
+  padding: 16px 0px 40px;
 }
 
 @media screen and (min-width: 768px) {
@@ -11,6 +11,12 @@
     font-size: 30px;
     line-height: 36px;
     max-width: 640px;
+    padding: 32px 0px 56px;
  }
 }
 
+@media screen and (min-width: 1280px) {
+  .lead__subtitle {
+    padding: 32px 0px 64px;
+ }
+}
